feat: enhance code quality metrics and logging across controllers
- Added SonarScanner configuration to the README for improved code quality metrics using SonarQube and SonarCloud.
- Updated `pom.xml` to include the Sonar Maven plugin and configured profiles for running Sonar analysis.
- Replaced `System.out.println` statements with SLF4J logging in multiple controllers for better logging practices.
- Improved validation logic in `EmpresaController` for creating companies, encapsulating validation in dedicated methods.
- Refactored `PasantiaController` and `PostulacionController` to utilize structured logging and enhance readability.
- Cleaned up unused constructors and improved code consistency across various classes.