@@ -4,12 +4,13 @@ import com.seminario.pasantias.entity.Carrera;
 import com.seminario.pasantias.dto.CarreraRequest;
 import com.seminario.pasantias.response.GenericResponse;
 import com.seminario.pasantias.service.CarreraService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/carreras")
@@ -17,6 +18,8 @@ import java.util.stream.Collectors;
              methods = {RequestMethod.GET, RequestMethod.POST, RequestMethod.PUT, RequestMethod.DELETE, RequestMethod.OPTIONS},
              allowedHeaders = "*")
 public class CarreraController {
+
+    private static final Logger log = LoggerFactory.getLogger(CarreraController.class);
 
     @Autowired
     private CarreraService carreraService;
@@ -47,7 +50,7 @@ public class CarreraController {
             List<Carrera> carreras = carreraService.getAllCarreras();
             return carreras.stream()
                     .map(Carrera::getNombre)
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             Optional<Carrera> carrera = carreraService.getCarreraByNombre(nombre);
             return carrera.map(c -> List.of(c.getNombre()))
@@ -57,9 +60,7 @@ public class CarreraController {
 
     @PostMapping("/updateCarrera")
     public GenericResponse updateCarrera(@RequestBody CarreraRequest request) {
-        System.out.println("=== DEBUG UPDATE CARRERA ===");
-        System.out.println("Request ID: " + request.getId());
-        System.out.println("Request Nombre: " + request.getNombre());
+        log.debug("Update carrera request. id={}, nombre={}", request.getId(), request.getNombre());
         
         GenericResponse response = new GenericResponse();
         if (request.getId() == null || request.getNombre() == null || request.getNombre().isEmpty()) {
@@ -69,14 +70,13 @@ public class CarreraController {
         }
         try {
             Carrera carrera = new Carrera(request.getId(), request.getNombre());
-            System.out.println("Carrera a actualizar: ID=" + carrera.getId() + ", Nombre=" + carrera.getNombre());
+            log.debug("Carrera a actualizar. id={}, nombre={}", carrera.getId(), carrera.getNombre());
             carreraService.updateCarrera(carrera);
-            System.out.println("Carrera actualizada exitosamente");
+            log.debug("Carrera actualizada exitosamente. id={}", carrera.getId());
             response.setCode(0);
             response.setMessage(null);
         } catch (Exception e) {
-            System.err.println("Error al actualizar carrera: " + e.getMessage());
-            e.printStackTrace();
+            log.warn("Error al actualizar carrera. id={}, msg={}", request.getId(), e.getMessage());
             response.setCode(-1);
             response.setMessage(e.getMessage());
         }
